# TCPServer_Design

./: .gitignore  CMakeLists.txt  IMPROVEMENTS.md  README.md  build_all.bash  build_all.sh  run_multi.sh
Client/: CMakeLists.txt  Cmakelists.txt  TcpClient.cpp
Server/: CMakeLists.txt  Cmakelists.txt  Dispatcher.h  ExampleMessageHandler.cpp  ExampleMessageHandler.h  Logger.h  Message.h  RequestHandler.cpp  RequestHandler.h  TcpServer.cpp  TcpServer.h  ThreadSafeQueue.h  main.cpp
test/: client_json.txt
